--- a/CinemaTicketSystem/Views/Shared/_Layout.cshtml
+++ b/CinemaTicketSystem/Views/Shared/_Layout.cshtml
@@ -111,7 +111,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">🎬 CinemaHub</a>
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">🎬 Warsaw Cinema</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -165,14 +165,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h6>About CinemaHub</h6>
+                    <h6>About Warsaw Cinema</h6>
                     <p>Your premier destination for booking cinema tickets online.</p>
                 </div>
 
             </div>
             <hr style="border-color: #ff6b6b;" />
             <div class="text-center">
-                <p>&copy; 2025 CinemaHub. All rights reserved.</p>
+                <p>&copy; 2025 Warsaw Cinema. All rights reserved.</p>
             </div>
         </div>
     </footer>
