--- a/CinemaTicketSystem/Views/Booking/Success.cshtml
+++ b/CinemaTicketSystem/Views/Booking/Success.cshtml
@@ -30,7 +30,7 @@
             Number of Tickets
         </dt>
         <dd class="col-sm-10">
-            @Model.NumberOfSeats
+            @Model.Seats.Count()
         </dd>
         <dt class="col-sm-2">
             Total Price
