--- a/CinemaTicketSystem/Views/Shared/_Layout.cshtml
+++ b/CinemaTicketSystem/Views/Shared/_Layout.cshtml
@@ -127,6 +127,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" asp-controller="Screening" asp-action="Create">+ Add Screening</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="UserManagement" asp-action="Index">Manage Users</a>
+                            </li>
                         }
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown">
@@ -134,6 +137,7 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                                 <li><a class="dropdown-item" asp-controller="Account" asp-action="Profile">Profile</a></li>
+                                <li><a class="dropdown-item" asp-controller="Account" asp-action="Bookings">My Bookings</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li>
                                     <form method="post" asp-controller="Account" asp-action="Logout" style="display:inline;">
@@ -158,7 +162,9 @@
     </nav>
 
     <main role="main">
-        @RenderBody()
+        <div class="container my-4">
+            @RenderBody()
+        </div>
     </main>
 
     <footer>
@@ -196,5 +202,6 @@
             }, false);
         })();
     </script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
