--- a/Views/UserManagement/Edit.cshtml
+++ b/Views/UserManagement/Edit.cshtml
@@ -13,6 +13,7 @@
             <div class="card-body p-4">
                 <form method="post" novalidate>
                     <input type="hidden" asp-for="Id" />
+                    <input type="hidden" asp-for="Version" />
                     <div asp-validation-summary="ModelOnly" class="alert alert-danger" role="alert"></div>
 
                     <div class="mb-3">
