--- a/Views/Booking/Cancel.cshtml
+++ b/Views/Booking/Cancel.cshtml
@@ -38,7 +38,9 @@
 
                     <hr />
 
-                    <form method="post">
+                    <form asp-action="Cancel">
+                        <input type="hidden" asp-for="Id" />
+                        <input type="hidden" asp-for="Version" />
                         <button type="submit" class="btn btn-danger">Yes, Cancel Booking</button>
                         <a href="@Url.Action("Bookings", "Account")" class="btn btn-secondary">No, Keep Booking</a>
                     </form>
