--- a/Views/UserManagement/Index.cshtml
+++ b/Views/UserManagement/Index.cshtml
@@ -6,6 +6,7 @@
 
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h2>User Management</h2>
+    <a asp-action="AddUser" class="btn btn-success">+ Add User</a>
 </div>
 
 @if (TempData["SuccessMessage"] != null)
